--- a/client/lib/css/baseline.css
+++ b/client/lib/css/baseline.css
@@ -7,6 +7,11 @@ html {
     font-size: 16px;
 }
 
+body {
+    overflow: hidden;
+    font-family: sans-serif;
+}
+
 *, *:before, *:after {
     box-sizing: inherit;
 }
@@ -14,7 +19,6 @@ html {
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
     margin: 0;
     padding: 0;
-    font-weight: normal;
 }
 
 input, textarea, select, button, img {
