--- a/client/app/styles.css
+++ b/client/app/styles.css
@@ -1,17 +1,8 @@
 @import "../lib/baseline.css";
 @import "components/unlock-form.css";
 @import "components/account-list.css";
+@import "components/account-editor.css";
 
 body {
     padding: 20px;
-}
-
-.button {
-    cursor: pointer;
-    border-radius: 4px;
-    padding: 6px 8px;
-}
-
-.button.new {
-    background: #3CB371;
 }
