Store password in separate account secrets file

--- a/client/app/components/account-editor.css
+++ b/client/app/components/account-editor.css
@@ -1,1 +1,7 @@
 @import "../../lib/components/form.css";
+
+.account-editor-buttons {
+    display: flex;
+    flex-flow: row nowrap;
+    gap: 10px;
+}
